integrated TMDB API and added pagination

--- a/Film-Vault/index.html
+++ b/Film-Vault/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- fontstyle script -->
+    <script src="https://kit.fontawesome.com/a044c983c7.js" crossorigin="anonymous"></script>
   </body>
 </html>
